deleted layout, UI and bugfixes, added 404, added docked sidebar mode for fullscreen, added mobile view with collapsable menu

--- a/src/components/css/view.module.css
+++ b/src/components/css/view.module.css
@@ -1,4 +1,4 @@
 .view {
-  max-width: 640px;
+  max-width: 800px;
   margin: 2rem auto 3rem;
 }
